<resources>
    <string name="app_name">FireNote</string>
    <string name="action_settings">Settings</string>
    <string name="action_logOut">Logged out</string>
    <string name="title_activity_login">Login to your account</string>
    <string name="title_activity_register">Register a new account</string>
    <string name="add_Element_Title">Add a new Element</string>
    <string name="edit_Note_Title">Edit Note</string>
    <string name="edit_Bundle_Title">Edit Bundle</string>
    <string name="verification_error">"Account not verfied yet. Please click verification link"</string>
    <string name="error_register_empty">Please fill out all fields!</string>
    <string name="error_register_invalid_characters">Register failed! One or more inputs contain invalid characters</string>
    <string name="error_register_user_already_exists">Register failed! User already exists</string>
    <string name="error_register_invalid_email">Register failed! Invalid E-Mail address</string>
    <string name="error_register_password_weak">Password is too weak!</string>
    <string name="error_password_match">Passwords don\'t match or are empty!</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_master_password">Enter your master password</string>
    <string name="enter_email">Enter E-Mail address</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="element_note">Note</string>
    <string name="element_gallery">Gallery</string>
    <string name="from_app">from FireNote</string>
    <string name="element_checklist">Checklist</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_sort">Sort elements</string>
    <string name="sort_by">Sort by %1$s</string>
    <string name="sort_ascending_date">Date Ascending</string>
    <string name="sort_descending_date">Date Descending</string>
    <string name="sort_ascending_name">Name Ascending</string>
    <string name="sort_descending_name">Name Descending</string>
    <string name="login_loading">Logging in...</string>
    <string name="register_loading">Please wait...</string>
    <string name="add_checklist_item_title">Add new Element</string>
    <string name="edit_checklist_item_title">Edit Checklist Element</string>
    <string name="confirm_add_dialog">Done</string>
    <string name="cancel">Cancel</string>
    <string name="edit_checklist_title">Edit Checklist</string>
    <string name="title_activity_edit_checklist">Edit Checklist</string>
    <string name="delete_checklist_title">Delete Checklist</string>
    <string name="delete_bundle_title">Delete Bundle</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="edit_element_title">Edit Element</string>
    <string name="delete_element">Delete</string>
    <string name="title_activity_note">Note</string>
    <string name="confirm_delete_dialog">Delete</string>
    <string name="delete_dialog_confirm_text">Do you really want to delete this element?</string>
    <string name="default_category">Default Category</string>
    <string name="dialog_enter_title">Enter title here</string>
    <string name="dialog_enter_category">Enter category here</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="new_checklist_item">Enter text here</string>
    <string name="delete_checklist_element">Delete</string>
    <string name="start_edit_mode">Editing element</string>
    <string name="stop_edit_mode">Finished editing element</string>
    <string name="spinner_prompt">Finished editing element</string>
    <string name="add_category_placeholder">Enter category name</string>
    <string name="added_category">New Category added</string>
    <string name="moved_to_bin">Moved element to bin</string>
    <string name="bin">Recycle bin</string>
    <string name="undo">Undo</string>
    <string name="element_restored">Element restored!</string>
    <string name="title_activity_bin">Recycle Bin</string>
    <string name="clear_bin_title">Clear bin</string>
    <string name="confirm_clear_bin_dialog">Confirm</string>
    <string name="clear_bin_question">Do you really want to clear the recycle bin?</string>
    <string name="restore_element">Restore element</string>
    <string name="restore_element_question">Do you really want to restore this element?</string>
    <string name="edit">Edit</string>
    <string name="note_hint">Double tap or click on edit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="set_master_password">Set master password</string>
    <string name="edit_user_profile">Edit User profile</string>
    <string name="master_password_description">The master password is used to lock your Notes and Checklists. It is not your login password!</string>
    <string name="about_title">About FireNote</string>
    <string name="master_password_new_hint">Enter new password</string>
    <string name="master_password_new2_hint">Repeat new password</string>
    <string name="master_password_old_hint">Enter old password</string>
    <string name="need_connection">You need an internet connection to do that!</string>
    <string name="user_profile_description">Here you can edit the data of your account.</string>
    <string name="lock">Lock/Unlock</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account, your notes, checklists and bundles?</string>
    <string name="unlock">Unlock</string>
    <string name="google_auth_failed">Google Authentication Failed!</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="delete_account_description">Here you can delete your FireNote Account. All your stored elements will be deleted!</string>
    <string name="master_password_not_set">Please first set a master password under "Settings"!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="element_bundle">Bundle</string>
    <string name="current_sorthing_method">List sorted by</string>
    <string name="title_activity_bundle">Bundle</string>
    <string name="add_reminder">Add to calendar</string>
    <string name="forgot_password_link">Forgot your password?</string>
    <string name="title_activity_start">FireNote</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="reset_password_email">Enter your E-Mail address</string>
    <string name="send_mail">Send mail!</string>
    <string name="reset_failed">Reset unsuccessful. Please check E-Mail and internet connection!</string>
    <string name="reset_success">Reset mail sent! Please check your inbox</string>
    <string name="register_success">Registration successful! Please check your inbox for the activation link.</string>
    <string name="sort_category_name">Category Name</string>
    <string name="title_activity_category">Category</string>
    <string name="category_general">General</string>
    <string name="category_school">School</string>
    <string name="category_project">Project</string>
    <string name="category_sport">Sport</string>
    <string name="master_password_changed">Master Password has been changed</string>
    <string name="category_finances">Finances</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_business">Business</string>
    <string name="category_holidays">Holidays</string>
    <string name="category_events">Events</string>
    <string name="category_hobbies">Hobbies</string>
    <string name="register_title">Register a new account</string>
    <string name="reset_password_title">Reset your password</string>
    <string name="about">Created as a semester project for FH Hagenberg in Austria. If you have feedback or a bug report  for us, please contact support@firenote.at</string>
    <string name="title_activity_profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_email">Change E-Mail</string>
    <string name="reauth_title">Please login</string>
    <string name="reauth_failed">ReAuthentication Failed!</string>
    <string name="reauth_success">ReAuthentication Success!</string>
    <string name="change_password">Set login password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password_again">Repeat new password</string>
    <string name="password_not_equal_empty">Password\'s don\'t match and/or are empty</string>
    <string name="old_password_error">Old password not correct</string>
    <string name="password_changed">Password changed</string>
    <string name="share">Share</string>
    <string name="share_export">Share/Export to text</string>
    <string name="import_text_checklist">Add a line for each element you want to add or paste a copied text (max. 20 lines).</string>
    <string name="colors">Colors</string>
    <string name="check_all">Check all</string>
    <string name="categories">Categories</string>
    <string name="logged_in_as">Logged in as </string>
    <string name="new_notification_title">New Notification from FireNote</string>
    <string name="choose_element_category">Choose Element category:</string>
    <string name="choose_element_title">Choose Element title:</string>
    <string name="choose_element_color">Choose Element color:</string>
    <string name="change_password_description">Here you can change your login password. You will have to re-authenticate yourself first!</string>
    <string name="example_checklist">Example Checklist</string>
    <string name="example_note">Example Note</string>
    <string name="example_bundle">Example Bundle</string>
    <string name="example_checklist_element">Example Checklist Element</string>
    <string name="reminder">A reminder for your</string>
    <string name="import_from_textfile">Import from Text</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="done">Done</string>
    <string name="session_expired">Session Expired</string>
    <string name="not_done">Not Done</string>
    <string name="format_recipe">Format recipe</string>
    <string name="format_recipe_info">Copy a recipe ingridient list from any website and paste it into the textfield. Then press the \"Format recipe\" button.</string>
    <string name="login_title">Login</string>
    <string name="edit_no_connection">Currently no internet connection! Your update will be applied to all your devices as soon as connection is re-established.</string>
    <string name="listener_no_connection">Currently no internet connection! New data will be loaded when connection is re-established.</string>
    <string name="insert_multiple_items">Want to insert multiple items? Click here!</string>
    <string name="remove_checked_items_title">Clean checklist</string>
    <string name="remove_checked_items">Do you really want to delete all checked items?</string>
    <string name="example_note_text">This is a note! Double tap to edit me.</string>
    <string name="welcome_to_firenote">Welcome to FireNote!</string>
    <string name="tutorial_add_elements">Here you can add new items!</string>
    <string name="tutorial_title_sort">Sort Elements</string>
    <string name="tutorial_sort">Here you can sort your items</string>
    <string name="account_deleted">Account was deleted!</string>
    <string name="tutorial_title_hide">Hide Elements</string>
    <string name="tutorial_hide">Here you can hide/show your items</string>
    <string name="welcome_to_note">This is a note!</string>
    <string name="web_version">Web version</string>
</resources>