<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sunilson.firenote.presentation.checklist.ChecklistActivity">
    <item
        android:title="Checklist Settings"
        android:id="@+id/menu_settings"
        android:icon="@drawable/checklist_menu_settings_icon"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_lock"
        android:title="@string/lock"
        android:icon="@drawable/element_lock_icon"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_reminder"
        android:title="@string/add_reminder"
        android:orderInCategory="700"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_import"
        android:title="@string/import_from_textfile"
        android:orderInCategory="500"
        app:showAsAction="never" />

    <item
        android:id="@+id/clean_checklist"
        android:title="@string/remove_checked_items_title"
        android:orderInCategory="400"
        android:icon="@drawable/clear_checklist_icon"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/check_checklist"
        android:title="@string/check_all"
        android:orderInCategory="300"
        android:icon="@drawable/ic_check_circle_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_share"
        android:title="@string/share_export"
        android:orderInCategory="600"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        />

</menu>