<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.elements.bundle.BundleActivity">


    <item
        android:title="Checklist Settings"
        android:id="@+id/menu_settings"
        android:icon="@drawable/checklist_menu_settings_icon"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/menu_lock"
        android:title="@string/lock"
        android:icon="@drawable/element_lock_icon"
        app:showAsAction="ifRoom"
        android:orderInCategory="200"
        />

    <item
        android:id="@+id/bundle_menu_bin"
        android:title="@string/bin"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        />
    <item
        android:id="@+id/menu_reminder"
        android:title="@string/add_reminder"
        android:orderInCategory="500"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        />
</menu>