<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sunilson.firenote.presentation.homepage.MainActivity">
    <item
        android:id="@+id/main_element_sort"
        android:icon="@drawable/main_menu_sort_icon"
        android:title="Sort Elements"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/main_element_visibility"
        android:icon="@drawable/main_menu_visibility_icon"
        android:title="Visibility"
        app:showAsAction="ifRoom"
        android:orderInCategory="200"
        android:actionViewClass="android.widget.ImageButton"
        />
    <item
        android:id="@+id/action_logOut"
        android:orderInCategory="600"
        android:title="@string/menu_log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bin"
        android:orderInCategory="300"
        android:title="@string/bin"
        android:icon="@drawable/main_menu_bin_icon"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:icon="@drawable/main_menu_settings_icon"
        />
    <item
        android:id="@+id/action_web"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:title="@string/web_version"
        android:icon="@drawable/ic_web_black_24dp"
        android:iconTint="@color/title_icon_color"
        />

</menu>
