<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dialog_margin_horizontal"
    android:paddingRight="@dimen/dialog_margin_horizontal"
    android:paddingTop="8dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmail"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        />

    <Button
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/google_sign_in"
        android:layout_marginTop="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/google_login_button_dark"
        android:textColor="@color/white_text_color"
        />

</LinearLayout>