<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pro3.planner.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <Button
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:id="@+id/registerSubmitButton" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:id="@+id/registerEmail"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/registerEmail"
        android:layout_alignLeft="@+id/registerEmail"
        android:layout_alignStart="@+id/registerEmail"
        android:layout_marginTop="32dp"
        android:id="@+id/registerPassword"
        android:hint="@string/enter_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/registerPassword"
        android:layout_alignRight="@+id/registerPassword"
        android:layout_alignEnd="@+id/registerPassword"
        android:layout_marginTop="34dp"
        android:id="@+id/registerPasswordAgain"
        android:hint="@string/repeat_password" />

</RelativeLayout>
