<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dialog_margin_horizontal"
    android:paddingRight="@dimen/dialog_margin_horizontal"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/master_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableTint="@color/title_text_color"
        android:fontFamily="sans-serif"
        android:hint="@string/master_password_old_hint"
        android:inputType="textPassword"
        android:theme="@style/dialog_edittext" />

    <EditText
        android:id="@+id/master_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/lock_login"
        android:fontFamily="sans-serif"
        android:hint="@string/master_password_new_hint"
        android:inputType="textPassword"
        android:theme="@style/dialog_edittext" />

    <EditText
        android:id="@+id/master_password_new2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/lock_login"
        android:fontFamily="sans-serif"
        android:hint="@string/master_password_new2_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:theme="@style/dialog_edittext" />

</LinearLayout>