<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_element_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dialog_margin_horizontal"
    android:paddingRight="@dimen/dialog_margin_horizontal"
    android:paddingTop="@dimen/dialog_margin_vertically"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingRight="8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_element_title" />

        <EditText
            android:id="@+id/add_element_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:hint="@string/dialog_enter_title"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:theme="@style/dialog_edittext"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/add_element_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/choose_element_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/add_element_categorySpinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0px"
                android:layout_height="40dp"
                android:layout_marginLeft="-4dp"
                android:theme="@style/dialog_spinner"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_element_color" />

        <ListView
            android:id="@+id/colorlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dialog_margin_vertically"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
