<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sunilson.firenote.presentation.settings.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_settings"
            app:titleTextColor="@color/title_text_color">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/tint_white"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/content_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tint_white"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                style="@style/settingsLinearMasterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/settingsElementsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/username"
                        style="@style/settingsTextview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/change_password"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/settingsDivider"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/master_password"
                style="@style/settingsLinearMasterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/settingsElementsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/settingsTextview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_master_password" />

                    <TextView
                        style="@style/settingsTextviewSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/master_password_description" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/settingsDivider"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <LinearLayout
                style="@style/settingsLinearMasterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/change_password"
                    style="@style/settingsElementsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/settingsTextview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/change_password" />

                    <TextView
                        style="@style/settingsTextviewSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password_description" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/settingsDivider"
                    android:layout_width="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/delete_account"
                style="@style/settingsLinearMasterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/settingsElementsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/settingsTextview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_account" />

                    <TextView
                        style="@style/settingsTextviewSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_account_description" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/settingsDivider"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about"
                style="@style/settingsLinearMasterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/settingsElementsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/settingsTextview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/about_title" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/settingsDivider"
                    android:layout_width="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
