<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/login_activity_horizontal_margin"
    android:paddingRight="@dimen/login_activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/login_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pro3.planner.activities.StartActivity"
    tools:showIn="@layout/activity_start">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:paddingBottom="150dp"
        android:textColor="@color/white_text_color"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="50dp"
        android:orientation="vertical"
        >

        <Button
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/login_button_drawable"
            android:textColor="@color/tint_white"
            android:id="@+id/go_to_login"
            />

        <Button
            android:text="@string/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/register_button_drawable"
            android:textColor="@color/tint_white"
            android:id="@+id/go_to_register" />

    </LinearLayout>



</RelativeLayout>
